--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>Hello there! I'm Harshit Pathak, a passionate and motivated front-end developer who is thrilled to embark on a journey in the world of web development. Despite being a fresher, I've spent considerable time honing my skills and gaining a deep understanding of modern front-end technologies.
+        <p>Hello there I'm Harshit Pathak, a passionate and motivated front-end developer who is thrilled to embark on a journey in the world of web development. Despite being a fresher, I've spent considerable time honing my skills and gaining a deep understanding of modern front-end technologies.
 
           During my time at College, I completed several projects that allowed me to apply my knowledge of HTML, CSS, and JavaScript to create user-friendly and visually appealing websites. Additionally, I actively participated in online coding communities and took various courses to stay up-to-date with the latest industry trends and best practices.
           
